Closed Bug 708612 Opened 13 years ago Closed 13 years ago

Illegal instruction from DPPS on cpus without SSE4.1

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P1)

x86
Windows 7
defect

Tracking

(Not tracked)

VERIFIED FIXED
Q2 12 - Cyril

People

(Reporter: brbaker, Assigned: edwsmith)

References

Details

float4 distance, magnitude, dot and normalize functions are crashing when jitted in nondebugger builds on a windows Intel Core2 Duo T7700 @ 2.4 GHz


0222ecbd()	
vm.exe!avmplus::BaseExecMgr::unbox1(int atom=-858993460, avmplus::Traits * t=0xcccccccc, int * arg0=0xcccccccc)  Line 645 + 0xf bytes	C++
cccccccc()	


0222ECAB  movups      xmm0,xmmword ptr [eax+2B8h] 
0222ECB2  test        esi,esi 
0222ECB4  je          0222EF9E 
0222ECBA  subps       xmm0,xmm0 
0222ECBD  dpps        xmm0,xmm0,0F1h 
0222ECC3  sqrtss      xmm0,xmm0 
0222ECC7  sub         esp,0Ch 
0222ECCA  sub         esp,4 
0222ECCD  movss       dword ptr [esp],xmm0 
0222ECD2  mov         ecx,2058030h 
0222ECD7  call        avmplus::AvmCore::floatToAtom (455E00h)
Flags: in-testsuite+
Flags: flashplayer-triage+
Flags: flashplayer-qrb+
Flags: flashplayer-bug-
Assignee: nobody → edwsmith
Priority: -- → P1
Target Milestone: --- → Q2 12 - Cyril
This is related to bug# 703605. This failure was introduced with tr-float 6957:eb296131c1e0
Summary: crash running float4.distance() on windows core2 duo → Illegal instruction from DPPS on cpus without SSE4.1
Fix pushed to tr-float
changeset:   7054:e979ac707f1c
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.