Bug 708612 - Illegal instruction from DPPS on cpus without SSE4.1

Add detection of SSE3 and SSE41.  I don't need SSE3 but one of my
intermediate fixes used it, and I didn't rip out the detection code
afterwards.

If we have SSE41, we use DPPS as before.  Otherwise, we emit LIR
instructions to compute the dot product:

   dot(x,y):
     c = mulf4(x, y)
	 sum = addf(f4x(c), f4x(c))
	 sum = addf(sum, f4z(c)) // if dot3 or dot4
	 sum = addf(sum, f4w(c)) // if dot4